add: raw material category api and its api documentations
